# model-audits

./: .gitignore  AGENTS.md  PROJECT_PLAN.md  README.md  notes.md  pyproject.toml
configs/cloud/: taboo_ship_smoke.toml
configs/experiments/: mock_smoke.toml
docs/: milestone_1a_preflight.md
scripts/cloud/: bootstrap.sh  run_smoke.sh
src/model_audits/: __init__.py  __main__.py  artifacts.py  cli.py  cloud_artifacts.py  cloud_smoke.py  config.py  experiment.py  preflight.py  schemas.py  smoke_config.py
src/model_audits/auditors/: __init__.py  base.py  mock.py
src/model_audits/runners/: __init__.py  base.py  mock.py
tests/: test_artifacts_cli.py  test_cloud_smoke_artifacts.py  test_config.py  test_experiment.py  test_smoke_config_preflight.py
