[build-system]
requires = ["hatchling==1.27.0"]
build-backend = "hatchling.build"

[project]
name = "model-audits"
version = "0.1.0"
description = "Reproducible experiments for auditing secret-knowledge model organisms"
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = []

[project.optional-dependencies]
cloud = [
  "accelerate==1.8.1",
  "huggingface-hub==0.33.2",
  "peft==0.15.2",
  "safetensors==0.4.5",
  "sentencepiece==0.2.0",
  "tokenizers==0.21.2",
  "torch==2.7.0",
  "transformers==4.51.3",
]

[project.scripts]
model-audits = "model_audits.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/model_audits"]
